Simplify VelioraGacha core for stable build